--- a/.github/workflows/BBB2.yml
+++ b/.github/workflows/BBB2.yml
@@ -26,3 +26,5 @@ jobs:
               env:
                   BBBCK: ${{ secrets.BBBCK2 }}
                   PUSH_KEY: ${{ secrets.PUSH_KEY }}
+                  TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+                  TG_USER_ID: ${{ secrets.TG_USER_ID }}
